tests/rosetta/out/C/aks-test-for-primes.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:40Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:40Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
const char *poly(int p) {
  const char *s = "";
  int coef = 1;
  int i = p;
  if (coef != 1) {
    char *tmp1 = _str(coef);
    char *tmp2 = concat_string(s, tmp1);
    s = tmp2;
  }
  while (i > 0) {
    char *tmp3 = concat_string(s, "x");
    s = tmp3;
    if (i != 1) {
      char *tmp4 = concat_string(s, "^");
      char *tmp5 = _str(i);
      char *tmp6 = concat_string(tmp4, tmp5);
      s = tmp6;
    }
    coef = (int)((coef * i / (p - i + 1)));
    int d = coef;
    if ((p - (i - 1)) % 2 == 1) {
      d = (-d);
    }
    if (d < 0) {
      char *tmp7 = concat_string(s, " - ");
      char *tmp8 = _str((-d));
      char *tmp9 = concat_string(tmp7, tmp8);
      s = tmp9;
    } else {
      char *tmp10 = concat_string(s, " + ");
      char *tmp11 = _str(d);
      char *tmp12 = concat_string(tmp10, tmp11);
      s = tmp12;
    }
    i = i - 1;
  }
  if ((strcmp(s, "") == 0)) {
    s = "1";
  }
  return s;
}

int aks(int n) {
  if (n < 2) {
    return 0;
  }
  int c = n;
  int i = 1;
  while (i < n) {
    if (c % n != 0) {
      return 0;
    }
    c = (int)((c * (n - i) / (i + 1)));
    i = i + 1;
  }
  return 1;
}

int main() {
  int p = 0;
  while (p <= 7) {
    char *tmp13 = _str(p);
    char *tmp14 = concat_string(tmp13, ":  ");
    printf("%s\n", tmp14 + poly(p));
    p = p + 1;
  }
  int first = 1;
  p = 2;
  const char *line = "";
  while (p < 50) {
    if (aks(p)) {
      if ((first)) {
        char *tmp15 = _str(p);
        char *tmp16 = concat_string(line, tmp15);
        line = tmp16;
        first = 0;
      } else {
        char *tmp17 = concat_string(line, " ");
        char *tmp18 = _str(p);
        char *tmp19 = concat_string(tmp17, tmp18);
        line = tmp19;
      }
    }
    p = p + 1;
  }
  printf("%s\n", line);
}

int main() {
  main();
  return 0;
}
